<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_centers"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_centers" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_alerts"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_profile" />
</menu>
