<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="Home" />
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_report"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_report" />
    <item
        android:id="@+id/nav_household"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="Household" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
